// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="layout-row layout-align-center-center ccb_loading loader_box"
>
  <div
    className="cube preload"
  >
    <div
      className="cube_face cube_face_front"
    >
      <i
        className="fa fa-plane clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_back"
    >
      <i
        className="fa fa-anchor clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_left"
    >
      <i
        className="fa fa-truck clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_right"
    >
      <i
        className="fa fa-truck clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_bottom"
    >
      <i
        className="fa fa-anchor clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_top"
    >
      <i
        className="fa fa-plane clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="layout-row layout-align-center-center ccb_loading loader_box"
>
  <div
    className="cube preload"
  >
    <div
      className="cube_face cube_face_front"
    >
      <i
        className="fa fa-plane clip"
        style={
          Object {
            "color": "#E0E0E0",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_back"
    >
      <i
        className="fa fa-anchor clip"
        style={
          Object {
            "color": "#E0E0E0",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_left"
    >
      <i
        className="fa fa-truck clip"
        style={
          Object {
            "color": "#E0E0E0",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_right"
    >
      <i
        className="fa fa-truck clip"
        style={
          Object {
            "color": "#E0E0E0",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_bottom"
    >
      <i
        className="fa fa-anchor clip"
        style={
          Object {
            "color": "#E0E0E0",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_top"
    >
      <i
        className="fa fa-plane clip"
        style={
          Object {
            "color": "#E0E0E0",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`theme.logoLarge is truthy 1`] = `
<div
  className="layout-row layout-align-center-center ccb_loading loader_box"
>
  <div
    className="cube preload"
  >
    <div
      className="cube_face cube_face_front"
    >
      <i
        className="fa fa-plane clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_back"
    >
      <i
        className="fa fa-anchor clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_left"
    >
      <i
        className="fa fa-truck clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_right"
    >
      <i
        className="fa fa-truck clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_bottom"
    >
      <i
        className="fa fa-anchor clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="cube_face cube_face_top"
    >
      <i
        className="fa fa-plane clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
</div>
`;
